TEZ-4299: Default java opts cause jdk11 to fail